--- a/static/index.html
+++ b/static/index.html
@@ -1,21 +1,71 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Hello World</title>
-    <link rel="stylesheet" href="styles.css">
 
-  </head>
-  <body>
-    <h1>Hello World</h1>
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-      window.onload = () => {
-        const socket = io();
-        socket.emit('message', 'Hello World');          
-      }
+<head>
+  <meta charset="UTF-8">
+  <title>Hello World</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
 
-    </script>
-  
-  </body>
+</head>
+
+<body>
+  <div id="main-content">
+    <div id="menu">
+      <h1 style="font-size:20px;text-align: center;margin-top:5px;margin-bottom:5px;">BattleSquared</h1>
+
+    </div>
+  </div>
+  <h1></h1>
+  <script src="/socket.io/socket.io.js"></script>
+  <script type="module">
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js'
+    import { getAuth, signInWithPopup, GoogleAuthProvider } from 'https://www.gstatic.com/firebasejs/11.10.0/firebase-auth.js'
+    const firebaseConfig = {
+      apiKey: "AIzaSyB7OCNPbpSzOXGPvaUOKrYyM1dS0j8VYLQ",
+      authDomain: "battlesquared-e8742.firebaseapp.com",
+      projectId: "battlesquared-e8742",
+      storageBucket: "battlesquared-e8742.firebasestorage.app",
+      messagingSenderId: "1030828037619",
+      appId: "1:1030828037619:web:7f1bbc990090976089ae86"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const provider = new GoogleAuthProvider();
+    const auth = getAuth(app);
+
+
+    window.onload = () => {
+      const socket = io();
+      auth.onAuthStateChanged(function (user) {
+        if (user) {
+
+          var uid = user.uid;
+          console.log(uid);
+          socket.emit("login", uid)
+        } else {
+          signInWithPopup(auth, provider).then((result) => {
+          }).catch((error) => {
+            const errorCode = error.code;
+            const errorMessage = error.message;
+            const email = error.customData.email;
+            const credential = GoogleAuthProvider.credentialFromError(error);
+            console.log(errorMessage);
+          });
+        }
+      })
+      socket.on("set  _user", () => {
+        console.log("need to set user")
+      })
+      socket.on("user_info", (info) => {
+        console.log(info)
+      })
+    }
+  </script>
+
+</body>
+
 </html>
